tests/errors/validation/literal-inside-function.fn
---
Description: Literal declared inside a function body
Expected: compile error
---

type NestTest
{
    fn Outer
    {
        literal px(value: i32) -> i32
        {
            return value
        }
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
